conversion to Java 8, new result: 0.151 YO